[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "leetcode solution"
repository = "https://github.com/shixinhuang99/leetcode-daily"
license = "MIT"

[lib]
doc = false
doctest = false

[dev-dependencies]
test-case = "=3.3.1"

[workspace]
members = ["xtask"]

[features]
test_utils = []

[lints.rust]
unused_imports = "allow"
dead_code = "allow"

[lints.clippy]
comparison_chain = "allow"
